--- a/src/styles/Calendario.module.css
+++ b/src/styles/Calendario.module.css
@@ -8,6 +8,9 @@
     font-weight: bold;
     color: #333;
   }
+  h2 {
+    color: #2563eb
+  }
   
   .subtitle {
     font-size: 18px;
@@ -15,19 +18,42 @@
     margin-bottom: 20px;
   }
   
+  /* Estilo para a navegação entre meses */
+  .nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  
+  .navButton {
+    background-color: #333;
+    color: #333;
+    border: none;
+    padding: 10px;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 50%;
+    transition: 0.3s;
+  }
+  
+  .navButton:hover {
+    background-color: #2563eb;
+  }
+  
   /* Estilo para os dias do mês */
-  .daysGrid {
+  .calendarGrid {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     gap: 10px;
-    max-width: 320px;
+    max-width: 350px;
     margin: auto;
   }
   
   .dayButton {
     padding: 12px;
     border-radius: 8px;
-    border: 1px solid #ccc;
+    border: 1px solid #333;
     background-color: #333;
     cursor: pointer;
     font-size: 16px;
@@ -35,11 +61,11 @@
   }
   
   .dayButton:hover {
-    background-color: #ffd700;
+    background-color: #2563eb;
   }
   
   .dayButton.selected {
-    background-color: #febc02;
+    background-color: #2563eb;
     color: white;
   }
   
@@ -63,7 +89,20 @@
   }
   
   .timeButton:hover {
-    background-color: #febc02;
+    background-color: #2563eb;
     color: white;
+  }
+  
+  /* Estilo para horários ocupados */
+  .timeButton.occupied {
+    background-color: #e0e0e0;
+    color: #999;
+    cursor: not-allowed;
+  }
+  
+  .timeButton:disabled {
+    background-color: #e0e0e0;
+    color: #999;
+    cursor: not-allowed;
   }
   
